# BuddyOS

./: .gitignore  main.py  pyproject.toml
agents/: buddy.py
core/: buddy.py  database.py  deps.py  discovery.py  fact_utils.py  models.py  orchestrator.py  router.py
